# CARKit

./: .dockerignore  .gitignore  README.md  build_ws.sh  carkit_stack_lib.sh  install_env.sh  map.pcd  start_autonomous.sh  stop_carkit.sh
carkit/: setup_vendor_repos.sh  vendor.repos
carkit/bringup/: README.md
carkit/bringup/carkit_bringup/: package.xml  setup.cfg  setup.py
carkit/bringup/carkit_bringup/launch/: carkit.launch.py  carkit_ada_control.launch.py  carkit_nav2_av.launch.py  control_mux.launch.py  f1tenth_control.launch.py
carkit/bringup/rviz/: depth.rviz  nav2_av.rviz
carkit/control/: README.md
carkit/control/carkit_behavior/: package.xml  setup.cfg  setup.py
carkit/control/carkit_behavior/carkit_behavior/: __init__.py  behavior_center_node.py  behavior_logic.py  path_geometry.py  road_rule_behavior_node.py
carkit/control/carkit_behavior/config/: behavior_center.yaml
carkit/control/carkit_behavior/launch/: behavior_center.launch.py  road_rules.launch.py
carkit/control/carkit_behavior/scripts/: behavior_center_node
carkit/control/carkit_behavior/test/: test_behavior_2d.py  test_behavior_logic.py  test_path_geometry.py
carkit/control/carkit_command_mux/: CMakeLists.txt  package.xml
carkit/control/carkit_command_mux/src/: carkit_command_mux_node.cpp
carkit/control/carkit_control_center/: package.xml  setup.cfg  setup.py
carkit/control/carkit_control_center/carkit_control_center/: control_center_node.py
carkit/control/carkit_control_center/config/: control_center.yaml
carkit/control/carkit_control_center/launch/: control_center.launch.py
carkit/control/carkit_human_control/: package.xml  setup.cfg  setup.py
carkit/control/carkit_human_control/carkit_human_control/: keyboard_ackermann.py
carkit/control/carkit_human_control/launch/: controller.launch.py  joystick.launch.py  keyboard.launch.py
carkit/control/carkit_pure_pursuit/: CMakeLists.txt  README.md  package.xml
carkit/control/carkit_pure_pursuit/launch/: path_loader.launch.py  pure_pursuit.launch.py  pure_pursuit_system.launch.py  waypoint_recorder.launch.py
carkit/control/carkit_pure_pursuit/src/: carkit_pure_pursuit.cpp  pure_pursuit_main.cpp
carkit/interfaces/: README.md
carkit/interfaces/carkit_lidarslam_msgs/: CMakeLists.txt  package.xml
carkit/interfaces/carkit_lidarslam_msgs/msg/: MapArray.msg
carkit/localization/: README.md
carkit/localization/carkit_amcl/: package.xml  setup.cfg  setup.py
carkit/localization/carkit_amcl/behavior_trees/: navigate_through_poses_ackermann.xml  navigate_to_pose_ackermann.xml
carkit/localization/carkit_lidar_localization/: CMakeLists.txt  README.md  package.xml
carkit/mapping/: README.md
carkit/mapping/carkit_graph_based_slam/: CMakeLists.txt  package.xml
carkit/mapping/carkit_lidarslam/: CMakeLists.txt  package.xml
carkit/mapping/carkit_lidarslam/rviz/: mapping.rviz
carkit/mapping/carkit_scanmatcher/: CMakeLists.txt  package.xml
carkit/mapping/carkit_slam/: package.xml  setup.cfg  setup.py
carkit/mapping/ndt_omp_ros2/: CARKIT_VENDOR_NOTE.md
carkit/navigation/: README.md  carkit_tuning_reference.md
carkit/navigation/carkit_amcl/: package.xml  setup.py
carkit/navigation/carkit_amcl/behavior_trees/: navigate_through_poses_ackermann.xml  navigate_to_pose_ackermann.xml
carkit/navigation/carkit_amcl/carkit_amcl/: foxglove_waypoints.py  odom_tf_broadcaster.py
carkit/navigation/carkit_amcl/config/: nav2_params.yaml
carkit/navigation/carkit_amcl/launch/: nav2.launch.py
carkit/navigation/carkit_amcl/rviz/: localization.rviz
carkit/navigation/carkit_navigation/: package.xml  setup.py
carkit/navigation/carkit_navigation/launch/: navigation.launch.py
carkit/navigation/carkit_navigation/rviz/: navigation.rviz  planning.rviz
carkit/navigation/carkit_slam/: package.xml  setup.py
carkit/navigation/carkit_slam/launch/: slam.launch.py
carkit/navigation/carkit_slam/rviz/: mapping.rviz
carkit/perception/: README.md
carkit/perception/carkit_perception/: package.xml  setup.cfg  setup.py
carkit/perception/carkit_perception/carkit_perception/: perception_2d_node.py  perception_3d_node.py  perception_math.py  perception_node.py
carkit/perception/carkit_perception/launch/: perception.launch.py
carkit/perception/carkit_perception/models/: yolo11n_fp16.json
carkit/perception/carkit_perception/rviz/: perception.rviz
carkit/perception/carkit_perception/test/: test_perception_2d.py  test_perception_math.py
carkit/perception/carkit_perception/util/: capture_image_frame.py  export_fp16_engine.py
carkit/perception/carkit_perception_msgs/: CMakeLists.txt  package.xml
carkit/perception/carkit_perception_msgs/msg/: YoloDetection2D.msg  YoloDetection2DArray.msg  YoloDetection3D.msg  YoloDetection3DArray.msg  YoloTrafficLightDetection2D.msg
carkit/planning/: README.md
carkit/planning/carkit_behaviors/: package.xml  setup.cfg  setup.py
carkit/planning/carkit_navigation/: README.md  package.xml  setup.cfg  setup.py
carkit/sensors/: README.md
carkit/sensors/carkit_sensor_transforms/: package.xml  setup.cfg  setup.py
carkit/tools/: README.md
carkit/tools/carkit_tools/: package.xml  setup.cfg  setup.py
carkit/vehicle/: README.md
carkit/vehicle/carkit_vehicle_control/: package.xml  setup.cfg  setup.py
carkit/vehicle/f1tenth_system/: CARKIT_VENDOR_NOTE.md  README.md
docker/: Dockerfile.jetson  README.md  build_workspace.sh  docker-compose.jetson.yml  entrypoint.sh  publish_image.sh  run_jetson.sh  test_workspace_in_docker.sh
docs/: carkit_foxglove_layout.json  carkit_perception_layout.json  migration_report.md  topic_graph.md  troubleshooting.md
map/: map.pcd  map.yaml  map2.pgm  map2.yaml  map_3f.pgm  pose_graph.g2o
rviz/: vis_object_track.rviz
src/ada/: setup.cfg  setup.py
src/ada/ada/: demo1.py  demo2.py  distance_metrics.py  interactive_waypoints.py  path_tracker.py
src/ada/launch/: interactive_waypoints.launch.py  object_tracking.launch.py
src/ada/scripts/: plot_speed_distance.py
src/perception/perception/: perception_node.py
src/pure_pursuit_controller/: CMakeLists.txt
(+73 files in other folders)
