<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carkit_bringup</name>
  <version>0.0.0</version>
  <description>CARKit launch, maps, waypoints, and RViz configuration</description>
  <maintainer email="ada@todo.todo">CARKit maintainers</maintainer>
  <license>Apache-2.0</license>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>
  <exec_depend>carkit_sensor_transforms</exec_depend>
  <exec_depend>carkit_lidar_localization</exec_depend>
  <exec_depend>carkit_pure_pursuit</exec_depend>
  <exec_depend>ackermann_mux</exec_depend>
  <exec_depend>f1tenth_stack</exec_depend>
  <exec_depend>carkit_behaviors</exec_depend>
  <exec_depend>carkit_perception</exec_depend>
  <exec_depend>carkit_navigation</exec_depend>
  <exec_depend>carkit_tools</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>sllidar_ros2</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
