<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carkit_behavior</name>
  <version>0.1.0</version>
  <description>Traffic-light and stop-sign behavior overrides for CARKit.</description>
  <maintainer email="ada@todo.todo">CARKit maintainers</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>ackermann_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>carkit_perception_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>carkit_perception</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
