<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carkit_behavior</name>
  <version>0.0.0</version>
  <description>CARKit behavior layer for road-rule overrides and perception obstacles</description>
  <maintainer email="ada@todo.todo">CARKit maintainers</maintainer>
  <license>Apache-2.0</license>

  <depend>ackermann_msgs</depend>
  <depend>carkit_perception_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
